--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -20,5 +20,6 @@
     </form>
     <div *ngIf="notificationMessage" class="notification" [ngClass]="notificationType">
       {{ notificationMessage }}
+    </div>
   </div>
 </div>
